**************
RECENT CHANGES
**************

======
1.81.0
======

* script command: Do not prompt for variables, defined with "--define" option.
* script command: Added support for choices
* script command: Fixed resolution of other variables
* Added --define option to script:repo:run command
* Updated Symfony dependencies
* Fix flush to use Enterprise_PageCache_Model_Cache only for 1.11 and up (by Jay Becker)
* Added an '--add-routines' option to db:dump command. (by Pieter Hoste)

======
1.80.0
======

* Support for modules inside the vendor folder if app is not in phar mode
* db:dump - Added two new table group for strip option (idx, ee_changelog)
* Fixed problem with installer and target path "."
* Added twig debug extension
* dev:module:create command -> Replaced hard coded year with a dynamic version.
* Added cast_to_array twig filter
* Added help texts for most commands
* #228 - Command "config:delete" does not support wildcard *

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net